2008-08-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Extension,
	  MonoDevelop.SourceEditor.Extension/TemplateCodon.cs,
	  MonoDevelop.SourceEditor.Extension/TemplateExtensionNodeLoader.cs,
	  MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: fixed "Bug
	  405926 - Addins cannot add syntax schemes or colour schemes to the
	  text editor".

2008-08-11  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs,
	  gtk-gui/objects.xml: Tidy up the text editor options panels.
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs: Removed
	  unnecessary toolbox item attributes.
	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Fix spelling,
	  sheme -> scheme.

2008-08-11  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: fixed Bug 416088 -
	  Remove Whitespace From Newlines

2008-08-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed "Bug 415737 -
	  Crash with split window".

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml, gtk-gui/gui.stetic,
	  MonoDevelop.SourceEditor.mdp: Updated.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Request file edit
	  permission when the user tries to modify the document.
	* MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Fix possible
	  index out of range exception.

2008-08-04  Aaron Bockover  <abock@gnome.org>
